<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background3"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="50sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_margin="25dp"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btnSignIn"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/btnSignUp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
    </LinearLayout>



</RelativeLayout>

